Fixed possible violations with contrast

--- a/chamber/styles/join-small.css
+++ b/chamber/styles/join-small.css
@@ -259,6 +259,10 @@
         color: var(--white-col);
     }
 
+    button{
+        background: var(--white-col);
+        color: var(--text-col);
+    }
 
     .membersLevels button {
         display: block;
